@@ -46,6 +46,12 @@ enum
     MNU_OPTIONS,
     MNU_CUT,
     MNU_COPY,
+    MNU_INCLUDEFILTER,
+    MNU_EXCLUDEFILTER,
+    MNU_REMOVEFILTERS,
+    MNU_ASCSORT,
+    MNU_DESCSORT,
+    MNU_REMOVESORT,
     MNU_PASTE,
     MNU_CLEAR,
     MNU_FIND,
