@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-02-06 DP  1.9.0  Add options to the Edit Grid to allow sorting and 
+                      filtering based on the selected cell [Robins Tharakan]
 2008-02-04 DP  1.8.3  Allow non-superusers to debug their own functions.
 2008-02-01 GL  1.8.3  Fix query that tries to apply the DB restriction.
 2008-02-01 DP  1.8.3  Ensure info passed to Guru hints is HTML-safe.
